Fixed bugs and added test for the monitor